--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "<=14.x.x",
+    "npm": "<=6.x.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
